using System.Collections;
using System.Collections.Generic;
using UnityEngine;


public class PrimaryAttack : Skill
{
    public PrimaryAttack()
    {

    }
}
