using System.Collections;
using System.Collections.Generic;

public class Skill
{
    public int _damage;

    public Skill()
    {
        _damage = 1;
    }

    public Skill(int damage)
    {
        _damage = damage;
    }
}