@startuml

title Player Skill Tree Class Diagram

class Player
{
    int level
    int hp
    int str
    int tec
    float speed

    State state

    PrimaryAttack attack;
    SecondarySkill sec;
    EvadeAbility evade;
    PowerAbility power;
}

enum State
{
    DEATH
    EVADE
    ALIVE
}

class Skill
{
    float damage;
}

class PrimaryAttack
{
 
}

class SecondarySkill
{

}

class EvadeAbility
{

}

class PowerAbility
{

}

Skill --> PrimaryAttack
Skill --> SecondarySkill
Skill --> EvadeAbility
Skill --> PowerAbility

@enduml